<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="2"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="157dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/ejerciciorecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ejercicio:" />


        <TextView
            android:id="@+id/repeticionesrecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Repeticiones: " />


        <TextView
            android:id="@+id/pesomaximo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Peso Maximo :" />

        <TextView
            android:id="@+id/objetivorecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Objetivo: " />


    </LinearLayout>

    <LinearLayout
        android:layout_width="187dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/valorejrecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ejercicio" />

        <TextView
            android:id="@+id/valorrepeticionesrecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeticiones" />

        <TextView
            android:id="@+id/valorpesomaximo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/peso_maximo" />

        <TextView
            android:id="@+id/valoobjetivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/objetivo" />


    </LinearLayout>
</LinearLayout>